# fbmark

./: .gitignore  Cargo.toml  fbmark.db
src/: app.rs  config.rs  events.rs  main.rs  models.rs  tagpacker_adapter.rs  ui.rs  widgets.rs
src/adapters/: mod.rs  tagpacker_adapter.rs
src/models/: bookmarks.rs  tags.rs
src/ui/: core.rs  login.rs
