[package]
name = "fbmark"
version = "0.1.0"
authors = ["Kyrylo Stepanov <kyrylo.stepanov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5"
open = "1"
tui = "0.13"
sublime_fuzzy = "0.7.0"
clipboard = "0.5.0"
rusqlite = "0.24.2"