[package]
name = "fbmark"
version = "0.1.0"
authors = ["Kyrylo Stepanov <kyrylo.stepanov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.6"
open = "2.0.1"
tui = "0.13.0"
sublime_fuzzy = "0.7.0"
clipboard = "0.5.0"
rusqlite = "0.24.2"
uuid = { version = "0.8.0", features = ["serde", "v4"] }