[package]
name = "fbmark"
version = "0.1.0"
authors = ["Kyrylo Stepanov <kyrylo.stepanov@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.6"
open = "2.1.2"
tui = { version = "0.18.0", default-features = false, features = ["termion"] }
sublime_fuzzy = "0.7.0"
clipboard = "0.5.0"
rusqlite = "0.27.0"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1.18.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
confy = { version = "0.4.0" }